2007-11-22  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.hpp
	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.cpp
	(verify_oop): New method.
	* ports/hotspot/src/cpu/ppc/vm/cppInterpreter_ppc.cpp
	(generate_result_handler_for,
	generate_tosca_to_stack_converter,
	generate_stack_to_stack_converter,
	generate_stack_to_native_abi_converter,
	generate_normal_entry): Add calls to the above.
	* ports/hotspot/src/cpu/ppc/vm/interp_masm_ppc.cpp
	(fixup_after_potential_safepoint): Likewise.

2007-11-22  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/ppc/vm/globalDefinitions_ppc.hpp
	(StackAlignmentInBytes): New constant.
	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.cpp
	(StackFrame::generate_prolog,
	MacroAssembler::maybe_extend_frame,
	MacroAssembler::dump_int): Use the above.
	* ports/hotspot/src/cpu/ppc/vm/cppInterpreter_ppc.cpp
	(CppInterpreterGenerator::generate_compute_interpreter_state,
	AbstractInterpreter::size_top_interpreter_activation): Likewise.
	* ports/hotspot/src/cpu/ppc/vm/stubGenerator_ppc.cpp
	(generate_call_stub): Likewise.

2007-11-22  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-core-build.patch
	* patches/icedtea-ports.patch: Rearrange such that removing
	the core build patch will cause a compiler 1 build.

2007-11-22  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-core-build.patch
	* patches/icedtea-ports.patch:
	Build libjvm.so as client rather than server
	* patches/icedtea-ecj.patch: Remake for the above.
	* ports/jdk/src/solaris/bin/ppc/jvm.cfg
	* ports/jdk/src/solaris/bin/ppc64/jvm.cfg:
	Updated for the above.

2007-11-20  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.hpp
	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.cpp
	(bcctrl, bctrl): New methods.

	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.cpp
	(call): Use bctrl instead of blrl to preserve the link stack.
	* ports/hotspot/src/cpu/ppc/vm/cppInterpreter_ppc.cpp