@@ -1,3 +1,10 @@
+2007-11-22  Thomas Fitzsimmons  <fitzsim@redhat.com>
+
+	* rt/java/awt/color/ICC_Profile.java (ICC_Profile(byte[])): Remove
+	duplicate ProfileHeader creation.
+	* rt/gnu/java/awt/color/TagEntry.java
+	(TagEntry(int,int,int,byte[])): Check for invalid tag size.
+
 2007-11-22  Gary Benson  <gbenson@redhat.com>
 
 	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.hpp
